syntax = "proto3";

package keyhub.app.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

service AuthService {
  // 現在のユーザー情報取得
  rpc GetMe(GetMeRequest) returns (GetMeResponse);

  // ログアウト
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}

service TenantService {
  // 参加コードからテナント情報を取得
  rpc GetTenantByJoinCode(GetTenantByJoinCodeRequest) returns (GetTenantByJoinCodeResponse);

  // テナントに参加
  rpc JoinTenant(JoinTenantRequest) returns (JoinTenantResponse);

  // ログインユーザーが参加しているテナント一覧を取得
  rpc GetMyTenants(GetMyTenantsRequest) returns (GetMyTenantsResponse);
}

message GetMeRequest {}

message GetMeResponse {
  User user = 1;
}

message LogoutRequest {}

message LogoutResponse {
  bool success = 1;
}

message User {
  string id = 1 [(buf.validate.field).string.uuid = true];
  string email = 2;
  string name = 3;
  string icon = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message Tenant {
  string id = 1 [(buf.validate.field).string.uuid = true];
  string organization_id = 2 [(buf.validate.field).string.uuid = true];
  string name = 3;
  string description = 5;
  TenantType tenant_type = 6;
  int32 member_count = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

enum TenantType {
  TENANT_TYPE_UNSPECIFIED = 0;
  TENANT_TYPE_TEAM = 1; // チーム
  TENANT_TYPE_DEPARTMENT = 2; // 部署
  TENANT_TYPE_PROJECT = 3; // プロジェクト
  TENANT_TYPE_LABORATORY = 4; // 研究室
}

message GetTenantByJoinCodeRequest {
  string join_code = 1;
}

message GetTenantByJoinCodeResponse {
  string id = 1 [(buf.validate.field).string.uuid = true];
  string name = 2;
  string description = 3;
  TenantType tenant_type = 4;
}

message JoinTenantRequest {
  string join_code = 1;
}

message JoinTenantResponse {
  Tenant tenant = 1;
  string message = 2; // 成功メッセージ
}

message GetMyTenantsRequest {}

message GetMyTenantsResponse {
  repeated Tenant tenants = 1;
}
